--- a/Projects/BlogPreviewCard/package.json
+++ b/Projects/BlogPreviewCard/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "expo": "~54.0.22",
+    "expo-font": "~14.0.9",
+    "expo-image": "~3.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5"
