style: reformat app.json and package.json for consistent indentation.

--- a/Projects/BlogPreviewCard/app.json
+++ b/Projects/BlogPreviewCard/app.json
@@ -26,8 +26,6 @@
     "web": {
       "favicon": "./assets/images/favicon-32x32.png"
     },
-    "plugins": [
-      "expo-font"
-    ]
+    "plugins": ["expo-font"]
   }
 }
