--- a/HelloNative/package.json
+++ b/HelloNative/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "hellonative",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~54.0.20",
-    "expo-image": "~3.0.10",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.5"
-  },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+	"name": "hellonative",
+	"version": "1.0.0",
+	"main": "index.ts",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"expo": "~54.0.20",
+		"expo-image": "~3.0.10",
+		"expo-status-bar": "~3.0.8",
+		"react": "19.1.0",
+		"react-native": "0.81.5"
+	},
+	"devDependencies": {
+		"@types/react": "~19.1.0",
+		"baseline-browser-mapping": "^2.9.11",
+		"typescript": "~5.9.2"
+	},
+	"private": true
 }
