--- a/GoalBuddy/package.json
+++ b/GoalBuddy/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/indie-flower": "^0.4.1",
+    "@expo/vector-icons": "^15.0.3",
     "expo": "~54.0.30",
     "expo-font": "~14.0.10",
     "expo-status-bar": "~3.0.9",
